# self-driving

./: .gitignore  PROGRESS.md  README.md  swarm.yaml
agents/prompts/: BUILDER.md  PLANNER.md  REVIEWER.md
services/ai-planner/: README.md  pyproject.toml
services/ai-planner/src/: __init__.py  main.py
services/ai-planner/src/agents/: __init__.py  planner_agent.py
services/ai-planner/src/ai_planner/: __init__.py
services/ai-planner/src/models/: __init__.py
services/ai-planner/src/services/: __init__.py
services/ai-planner/src/tests/: __init__.py
services/ai-planner/tests/: __init__.py  test_planner.py
services/compute/: go.mod  main.go
services/network/: go.mod  main.go
services/rust-core/: Cargo.toml
services/rust-core/src/: grpc.rs  lib.rs  models.rs  resources.rs
services/storage/: go.mod  main.go
specs/: contracts.md  engine.md  ingestion.md  master_plan.md  tools.md
src/: __init__.py  main.py
src/agents/: planner_agent.py
src/ai_planner/: cost_predictor.py  decision_engine.py  memory_manager.py  provider_selector.py
tests/: test_integration.py  test_planner.py  test_rust_core.py
