[tool.poetry]
name = "ai-planner"
version = "0.1.0"
description = "AI Planner service for the infrastructure platform"
authors = ["AI Platform Team <team@infra-engine.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.24.0"
pydantic = "^2.5.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
openai = "^1.3.0"
langchain = "^0.1.0"
torch = "^2.0.0"
transformers = "^4.33.0"
ray = "^2.8.0"
celery = "^5.3.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*", "*/.venv/*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # files
  )/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ai_planner"]
known_third_party = ["fastapi", "grpc", "numpy", "pandas", "pydantic", "sqlalchemy", "torch", "transformers"]
