[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-planner"
version = "0.1.0"
description = "AI Planner service for the infrastructure platform"
authors = [
    {name = "AI Platform Team", email = "team@ai-platform.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "protobuf>=4.21.0",
    "pydantic>=2.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
ai-planner = "ai_planner.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_planner*"]
