[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-planner"
version = "0.1.0"
description = "AI Planner service for infrastructure decisions"
authors = [
    {name = "AI Infrastructure Team", email = "team@infra-engine.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "protobuf>=4.0.0",
    "grpcio>=1.40.0",
    "googleapis-common-protos>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/infra-engine/ai-planner"
Repository = "https://github.com/infra-engine/ai-planner"

[project.scripts]
ai-planner = "main:main"
